Fixed gaps throughout page and added new photo for extracurriculars

--- a/style.css
+++ b/style.css
@@ -3,32 +3,47 @@ html {
 }
 
 body {
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-family: 'Dosis', 'Open Sans', Arial;
     margin: 0;
     padding: 0;
 }
 
 header {
-    margin-top: -2.5%;
+    margin-top: -1.6%;
+    padding-top: 0.25%;
     background-color: lightblue;
     text-align: center;
     position: fixed;
     z-index: 10;
     width: 100%;
+    height: 17%;
 }
 
 h1 {
     margin-top: 5px;
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.75em;
+}
+
+p, a {
+    font-size: 1.1em;
 }
 
 main {
-    margin: 2vh 3vw;
     position: relative;
-    top: 175px;
+    top: 115px;
 }
 
-main > * {
-    margin-bottom: 5vh;
+.section {
+    margin: 0 3vw;
+}
+
+.section_title {
+    padding: 2% 0;
+    text-align: center;
 }
 
 .about_body {
@@ -48,14 +63,33 @@ footer {
     top: 200px;
 }
 
-#about, #projects, #extracurriculars, #contact {
+#about, #projects, #contact {
     position: relative;
-    height: 75vh;
+    height: 81vh;
+}
+
+#extracurriculars {
+    position: relative;
+    height: 83.5vh;
+}
+
+#projects {
+    margin-bottom: 0;
+}
+
+#extracurriculars {
+    background-image: url('assets/BC\ Children\'s\ 1.jpg');
+    background-size: cover;
+    margin: 0;
 }
 
 #about_anchor, #projects_anchor, #extracurriculars_anchor, #contact_anchor {
     display: block;
     position: relative;
-    top: -175px;
+    top: -20%;
     visibility: hidden;
+}
+
+#contact_title {
+    padding-top: 0;
 }
